@@ -1,5 +1,5 @@
 {{extend "layout.html"}}
-{{block userinfo}}{{end}}
+{{block user_info}}{{end}}
 {{block content}}
 {{include "inc_jquery_dialog2.html"}}
 <div id="login" style="display: none">
