@@ -1,5 +1,5 @@
 {{extend "layout.html"}}
-{{block userinfo}}{{end}}
+{{block user_info}}{{end}}
 {{block content}}
 <div id="login-container" class="content container">
     <div class="box span5 box_shadow content-outter">
