@@ -1,6 +1,6 @@
 {{extend "layout.html"}}
 
-{{block userinfo}}
+{{block user_info}}
 {{end}}
 
 {{block flash}}
