@@ -18,7 +18,7 @@
     {{include "inc_show_flashes.html"}}
     <div class="container">
     <div class="top_header">
-        {{block userinfo}}
+        {{block user_info}}
             <div class="align_right">
                 {{if hasattr(request, 'user') and request.user:}}
                     {{=request.user.username}} | <a href="/user/view">{{=_('Account Setting')}}</a> | <a href="/logout">{{=_('Logout')}}</a>
